# LoRa_RFM95x_Pico

./: README.md  RFM95.h  RFM95fun.cpp  RFM95reg.h
Client/: CMakeLists.txt  client.cpp
Server/: CMakeLists.txt  server.cpp
